# FlightSim

./: CMakeLists.txt  README.md  main.cpp
include/FlightSimulatorHopefully/: Aircraft.h  Callbacks.h  Camera.h  FPSCounter.h  GLFWInitializer.h  Mesh.h  ThirdPartyLibsInitializer.h  YokeSystemInputs.h
include/FlightSimulatorHopefully/chunk/: Chunk.h  ChunkManager.h
include/FlightSimulatorHopefully/rendering/: EBO.h  Mesh.h  RenderingUtilities.h  Shader.h  Texture.h  VAO.h  VBO.h
include/FlightSimulatorHopefully/terrain/: Chunk.h  ChunkGenerator.h  ChunkManager.h  FractalNoise.h
include/FlightSimulatorHopefully/text/: TextDisplay.h
include/libs/stb/: stb.cpp  stb_image.h
resources/shaders/: default.frag  default.vert
src/: YokeSystemInputs.cpp  main.cpp
src/chunks/: Chunk.cpp  ChunkGenerator.cpp  ChunkManager.cpp
src/inputs/: YokeSystemInputs.cpp
src/rendering/: Camera.cpp  EBO.cpp  Mesh.cpp  RenderingUtilities.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
src/text/: TextDisplay.cpp  TextDisplay.h
